feat(raw-material-batch): implement service methods and DTO conversion